--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,7 @@
 name: Deploy to AWS
 env:
   AWS_REGION_NAME: "us-west-2"
-  PACKAGE_NAME: "MLOps_${{github.sha}}.zip"
+  PACKAGE_NAME: "RAGMLOps_${{github.sha}}.zip"
   S3_BUCKET_NAME: "mlopswithgithubrag"
   
 on:
